//
// Copyright 2021 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package oak.examples.proxy_attestation;

import "google/protobuf/empty.proto";

message GetSignedCertificateRequest {
  bytes certificate_request = 1;
}

message GetSignedCertificateResponse {
  bytes certificate = 1;
}

message GetRootCertificateRequest {}

message GetRootCertificateResponse {
  bytes root_certificate = 1;
}

// Service for signing X.509 certificates.
// https://tools.ietf.org/html/rfc5280
service ProxyAttestation {
  // Get signed X.509 certificate based on the provided certificate signing request.
  rpc GetSignedCertificate(GetSignedCertificateRequest) returns (GetSignedCertificateResponse);
  // Get root X.509 certificate used by the Proxy Attestation Service to sign certificates.
  // This certificate is generated insode the TEE and is not the same certificate that is used to
  // connect to the proxy itself.
  //
  // Note: Current implementation doesn't support sealing, so the proxy generates a new certificate
  // on startup.
  rpc GetRootCertificate(GetRootCertificateRequest) returns (GetRootCertificateResponse);
}
